--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br>
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,31 @@
   <header>
     <img src="" alt="">
     <h2> Eu sou maria</h2>
-    <h1> eu estudo no leni</h1>
-  </header>  
+
+   <h1> eu estudo no leni</h1>
+  <p> eu trabalho tenho um cachorinho e moro em uma fazenda </p>
+  <p> as minhas abilidades eu consigo ler muitos livros </p>
+
+  </header> 
+  
+  <main class="container">
+    <h2>meus projetos</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">o projeto do figma</h5>
+              <p class="card-text">esse projeto foi feito com varias telas</p>
+              <a href="https://www.figma.com/design/6vSyKWBAPaWFwgDzoxVnkW/Untitled?node-id=0-1&p=f&t=uRvZnhdqUtsoNRIM-0" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+    </div>
+    </div>
+  </main>
+
 </body>
-</html>
+<
+
+
+
