--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous">
 </head>
 <body class="bg-dark text-light">
-  <header>
+  <header class="text-center">
     <img src="" alt="">
     <h2> Eu sou maria</h2>
 
@@ -20,21 +20,33 @@
   <main class="container">
     <h2>meus projetos</h2>
     <div class="row">
-      <div class="col-md-4">
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">o projeto do figma</h5>
-              <p class="card-text">esse projeto foi feito com varias telas</p>
-              <a href="https://www.figma.com/design/6vSyKWBAPaWFwgDzoxVnkW/Untitled?node-id=0-1&p=f&t=uRvZnhdqUtsoNRIM-0" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-    </div>
-    </div>
+          <div class="col-md-4">
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">o projeto do figma</h5>
+                  <p class="card-text">esse projeto foi feito com varias telas</p>
+                  <a href="https://www.figma.com/design/6vSyKWBAPaWFwgDzoxVnkW/Untitled?node-id=0-1&p=f&t=uRvZnhdqUtsoNRIM-0" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+        </div>
+    
+
+          <div class="col-md-4">
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">o bulley</h5>
+                  <p class="card-text">meu projeto o asunto foi o bulley</p>
+                  <a href="https://www.figma.com/design/6vSyKWBAPaWFwgDzoxVnkW/Untitled?node-id=0-1&p=f&t=uRvZnhdqUtsoNRIM-0" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+        </div>
+
+      </div>
   </main>
 
 </body>
-<
-
+  
 
 
