--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">o bulley</h5>
-                  <p class="card-text">meu projeto o asunto foi o bulley</p>
+                  <p class="card-text">meu projeto o asunto foi o bulley com um grupo de pessoas</p>
                   <a href="https://www.figma.com/design/6vSyKWBAPaWFwgDzoxVnkW/Untitled?node-id=0-1&p=f&t=uRvZnhdqUtsoNRIM-0" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
@@ -46,6 +46,13 @@
       </div>
   </main>
 
+
+
+  <footer class="container py-5"> 
+    <h2>entre em contato</h2>
+    <a href="https://github.com/mariavitoria1234567">github</a>
+    <p class="text-center my-5">&copy copyright 2025 criado por maria vitoria</p>
+  </footer>
 </body>
   
 
