--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
           <div class="col-md-4">
             <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="figma.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">o bulley</h5>
                   <p class="card-text">meu projeto o asunto foi o bulley com um grupo de pessoas</p>
