--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-dark text-light">
   <header class="text-center">
-    <img src="" alt="">
+    <img src="filhotes de gatos.jpeg" alt="" width="250" class="rounded-circle">
     <h2> Eu sou maria</h2>
 
    <h1> eu estudo no leni</h1>
@@ -54,6 +54,3 @@
     <p class="text-center my-5">&copy copyright 2025 criado por maria vitoria</p>
   </footer>
 </body>
-  
-
-
