--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body class="bg-dark text-light">
   <header class="text-center">
-    <img src="filhotes de gatos.jpeg" alt="" width="250" class="rounded-circle">
+    <img src="tl.webp" alt="" width="250" class="rounded-circle">
     <h2> Eu sou maria</h2>
 
    <h1> eu estudo no leni</h1>
   <p> eu trabalho tenho um cachorinho e moro em uma fazenda </p>
-  <p> as minhas abilidades eu consigo ler muitos livros </p>
+  <p class="badge bg-secondary"> as minhas abilidades eu consigo ler muitos livros </p>
 
   </header> 
   
@@ -22,7 +22,7 @@
     <div class="row">
           <div class="col-md-4">
             <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="figma.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">o projeto do figma</h5>
                   <p class="card-text">esse projeto foi feito com varias telas</p>
@@ -34,7 +34,7 @@
 
           <div class="col-md-4">
             <div class="card" style="width: 18rem;">
-                <img src="figma.png" class="card-img-top" alt="...">
+                <img src="Bullying-na-Escola-Um-Problema-que-Exige-Acao-Imediata.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">o bulley</h5>
                   <p class="card-text">meu projeto o asunto foi o bulley com um grupo de pessoas</p>
@@ -42,6 +42,21 @@
                 </div>
               </div>
         </div>
+
+        <div class="col-md-4">
+            <div class="card" style="width: 18rem;">
+                <img src="constituicao-federal-art-6-1.1x1.gif" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">trabalho de historia</h5>
+                  <p class="card-text"> eu vou falar sobre o artigo 6 e falar para os alunos
+
+                  
+               </p>
+                  <a href="https://www.figma.com/design/6vSyKWBAPaWFwgDzoxVnkW/Untitled?node-id=0-1&p=f&t=uRvZnhdqUtsoNRIM-0" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+        </div>
+
 
       </div>
   </main>
