--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous">
 </head>
-<body class="bg-dark text-light">
-  <header class="text-center">
+<body class="">
+  <header class="container text-center">
     <img src="tl.webp" alt="" width="250" class="rounded-circle">
     <h2> Eu sou maria</h2>
 
-   <h1> eu estudo no leni</h1>
-  <p> eu trabalho tenho um cachorinho e moro em uma fazenda </p>
-  <p class="badge bg-secondary"> as minhas abilidades eu consigo ler muitos livros </p>
+   <h1> eu estudo no colégio estadual civico militar leni marlene jacob</h1>
+  <p> eu trabalho tenho um cachorinho e moro em uma fazenda  gosto de fazer trabalho para escola ou ajudar o que as pessoas precisa de ajuda
+    estou no segundo ano do ensino medio ano que vem eu me formo no terceiro ano
+  </p>
+  <p class="badge bg-secondary"> as minhas abilidades eu consigo ler muitos livros gosto de cozinhar quando eu tenho tempo livre  </p>
 
   </header> 
   
@@ -25,7 +27,7 @@
                 <img src="figma.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">o projeto do figma</h5>
-                  <p class="card-text">esse projeto foi feito com varias telas</p>
+                  <p class="card-text">esse projeto foi feito com varias telas para mostrar e um site de compra e venda que pode ter carro celulares entre outras </p>
                   <a href="https://www.figma.com/design/6vSyKWBAPaWFwgDzoxVnkW/Untitled?node-id=0-1&p=f&t=uRvZnhdqUtsoNRIM-0" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
@@ -37,7 +39,7 @@
                 <img src="Bullying-na-Escola-Um-Problema-que-Exige-Acao-Imediata.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">o bulley</h5>
-                  <p class="card-text">meu projeto o asunto foi o bulley com um grupo de pessoas</p>
+                  <p class="card-text">meu projeto o asunto foi o bulley com um grupo de pessoas esse progeto foi feita com a intensão de ajudar os alunos/p>
                   <a href="https://www.figma.com/design/6vSyKWBAPaWFwgDzoxVnkW/Untitled?node-id=0-1&p=f&t=uRvZnhdqUtsoNRIM-0" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
@@ -48,7 +50,7 @@
                 <img src="constituicao-federal-art-6-1.1x1.gif" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">trabalho de historia</h5>
-                  <p class="card-text"> eu vou falar sobre o artigo 6 e falar para os alunos
+                  <p class="card-text"> eu vou falar sobre o artigo 6 e falar para os alunos que esse projeto e para consientizar que todos nós merecemos respeito e por que também está na lei para todos usarmos
 
                   
                </p>
